# agentic-ai-ops-kit

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
app/: demo_reports.py  langgraph_workflow.py  main.py  metrics.py  models.py  policy.py  red_team.py  retrieval.py  routing.py  store.py  tools.py  workflow.py
demo_data/policies/: escalation_policy.md  homeowners_water_sop.md
docs/: enterprise-hardening.md  public-proof-map.md  workflow_discovery_template.md
examples/enterprise_controls/: enterprise_controls_report.json  metrics_summary.json  red_team_review.json
schemas/: enterprise_controls_report.json  metrics_summary.json  red_team_review.json
tests/: test_api.py  test_langgraph_workflow.py  test_red_team.py  test_report_schemas.py  test_routing.py  test_workflow.py
