[project]
name = "forward-deployed-agentic-ai-ops-kit"
version = "0.1.0"
description = "Sanitized forward-deployed agentic AI demo: RAG-style document workflow, allowlisted tools, human approval, evals, and traces."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110",
  "pydantic>=2",
  "uvicorn>=0.27",
  "langgraph>=0.1.5",
]

[project.optional-dependencies]
dev = ["pytest>=8", "httpx>=0.27"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
